Sync all content

--- a/content/resources/al2-1.md
+++ b/content/resources/al2-1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Problem set in PS format.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-06ci-linear-algebra-communications-intensive-spring-2004/f41c725f0a43e27c587125a05eb4e8e7_al2.ps
 file_type: application/postscript
+parent_uid: 87094652-ad49-026a-e057-83c2d5d19014
 resourcetype: Other
 title: al2.ps
 uid: f41c725f-0a43-e27c-5871-25a05eb4e8e7
