--- a/content/resources/al3-1.md
+++ b/content/resources/al3-1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Problem set in PS format.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-06ci-linear-algebra-communications-intensive-spring-2004/1aa68b333e3bc794ca6914b1b417522a_al3.ps
 file_type: application/postscript
+parent_uid: 87094652-ad49-026a-e057-83c2d5d19014
 resourcetype: Other
 title: al3.ps
 uid: 1aa68b33-3e3b-c794-ca69-14b1b417522a
