--- a/content/resources/al4-1.md
+++ b/content/resources/al4-1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Problem set.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-06ci-linear-algebra-communications-intensive-spring-2004/398ec5c3cb9da1ad00970a402430d8b9_al4.pdf
 file_type: application/pdf
+parent_uid: 87094652-ad49-026a-e057-83c2d5d19014
 resourcetype: Document
 title: al4.pdf
 uid: 398ec5c3-cb9d-a1ad-0097-0a402430d8b9
