--- a/content/resources/rs1-1.md
+++ b/content/resources/rs1-1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Project information in PS format.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-06ci-linear-algebra-communications-intensive-spring-2004/628facd5fc5c688440e433dd96929388_rs1.ps
 file_type: application/postscript
+parent_uid: de3df049-521c-7063-56c9-8fdb65ea58aa
 resourcetype: Other
 title: rs1.ps
 uid: 628facd5-fc5c-6884-40e4-33dd96929388
