--- a/content/resources/rs2-1.md
+++ b/content/resources/rs2-1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Project information in PS format.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-06ci-linear-algebra-communications-intensive-spring-2004/9306ec2c9bbf482c17f94557e86f6270_rs2.ps
 file_type: application/postscript
+parent_uid: de3df049-521c-7063-56c9-8fdb65ea58aa
 resourcetype: Other
 title: rs2.ps
 uid: 9306ec2c-9bbf-482c-17f9-4557e86f6270
