--- a/content/resources/rs4-1.md
+++ b/content/resources/rs4-1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Project guidelines and instructions.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-06ci-linear-algebra-communications-intensive-spring-2004/72739661fb6815f71530b8eb859a0752_rs4.pdf
 file_type: application/pdf
+parent_uid: de3df049-521c-7063-56c9-8fdb65ea58aa
 resourcetype: Document
 title: rs4.pdf
 uid: 72739661-fb68-15f7-1530-b8eb859a0752
