--- a/content/resources/rs5-1.md
+++ b/content/resources/rs5-1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Project information in PS format.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-06ci-linear-algebra-communications-intensive-spring-2004/fafe8c85defe4a26abd905a70227c02d_rs5.ps
 file_type: application/postscript
+parent_uid: de3df049-521c-7063-56c9-8fdb65ea58aa
 resourcetype: Other
 title: rs5.ps
 uid: fafe8c85-defe-4a26-abd9-05a70227c02d
