--- a/content/resources/rs6-1.md
+++ b/content/resources/rs6-1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Supporting PS file for Project Assignment 6
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-06ci-linear-algebra-communications-intensive-spring-2004/87ad2129ce5c68e8043fb5b84a00114b_rs6.ps
 file_type: application/postscript
+parent_uid: de3df049-521c-7063-56c9-8fdb65ea58aa
 resourcetype: Other
 title: rs6.ps
 uid: 87ad2129-ce5c-68e8-043f-b5b84a00114b
