--- a/content/resources/rs61-1.md
+++ b/content/resources/rs61-1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Project information in PS format.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-06ci-linear-algebra-communications-intensive-spring-2004/384db750b06228e03199813e7429ebf2_rs61.ps
 file_type: application/postscript
+parent_uid: de3df049-521c-7063-56c9-8fdb65ea58aa
 resourcetype: Other
 title: rs61.ps
 uid: 384db750-b062-28e0-3199-813e7429ebf2
