--- a/content/resources/rs61.md
+++ b/content/resources/rs61.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Project guidelines and instructions.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-06ci-linear-algebra-communications-intensive-spring-2004/95873ef8528b835d549e45b8cca859bf_rs61.pdf
 file_type: application/pdf
+parent_uid: de3df049-521c-7063-56c9-8fdb65ea58aa
 resourcetype: Document
 title: rs61.pdf
 uid: 95873ef8-528b-835d-549e-45b8cca859bf
